Normal transform orientation is not aligned between two vertices #38592

Closed
opened 2014-02-11 14:07:36 +01:00 by JA 12 · 7 comments

Ubuntu 12.04 32-bit/Gnome 3, nVidia graphics.
Mint 16 64-bit, nVidia graphics.

Broken: 2.69.10 2038eb1, also tested on 2.69.10 c0a1332
Worked: 2.69 r60991

Normal transform orientation is not aligned between two vertices. Blender doesn't align it in development version although it does in the latest official release.
An image to illustrate: http://www.pasteall.org/pic/66617 - top: 2.69, bottom: 2.69.10
A temporary edge is needed between the two vertices to create a custom transform orientation in the development version.

Steps to reproduce:

  • Default cube, edit mode, delete all
  • ctrl+left click to add 3 connected vertices in an arbitary orientation
  • select first and last vertices. alt+space to switch to normal transform orientation
  • manipulator should show the normal orientation aligning the Z between two vertices
Ubuntu 12.04 32-bit/Gnome 3, nVidia graphics. Mint 16 64-bit, nVidia graphics. Broken: 2.69.10 2038eb1, also tested on 2.69.10 c0a1332 Worked: 2.69 r60991 Normal transform orientation is not aligned between two vertices. Blender doesn't align it in development version although it does in the latest official release. An image to illustrate: http://www.pasteall.org/pic/66617 - top: 2.69, bottom: 2.69.10 A temporary edge is needed between the two vertices to create a custom transform orientation in the development version. Steps to reproduce: - Default cube, edit mode, delete all - ctrl+left click to add 3 connected vertices in an arbitary orientation - select first and last vertices. alt+space to switch to normal transform orientation - manipulator should show the normal orientation aligning the Z between two vertices
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ja12

Added subscriber: @ja12

Added subscriber: @OliverBurn

Added subscriber: @OliverBurn

Added subscribers: @ideasman42, @brecht

Added subscribers: @ideasman42, @brecht

This behavior changed in {918ad1719f5ece6cd1da9cc3c0933620b83a2526}.

This behavior changed in {918ad1719f5ece6cd1da9cc3c0933620b83a2526}.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2014-02-11 22:52:50 +01:00

Based on feedback make further improvements, taking the active vertex into account too.

  	/* Logic explained:
 *
 * - Edges and vert-pairs treated the same way.
 * - Point the Z axis along the edge vector (towards the active vertex).
 * - Point the Y axis outwards (the same direction as the normals).
 *
 * Note that this is at odds a little with face select (and 3 vertices)
 * which point the Z axis along the normal, however in both cases Z is the dominant axis.
 */

18a8d88923

Based on feedback make further improvements, taking the active vertex into account too. ``` /* Logic explained: ``` * * - Edges and vert-pairs treated the same way. * - Point the Z axis along the edge vector (towards the active vertex). * - Point the Y axis outwards (the same direction as the normals). * * Note that this is at odds a little with face select (and 3 vertices) * which point the Z axis along the normal, however in both cases Z is the dominant axis. */ 18a8d88923
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38592
No description provided.